update to use ollama and resliency4j